SUBDIRS = tests

lib_LTLIBRARIES = liboilcore-@OIL_MAJOR_VERSION@.@OIL_MINOR_VERSION@.la
liboilcore_@OIL_MAJOR_VERSION@_@OIL_MINOR_VERSION@_la_SOURCES = hashtable.c oilcpu.c oilclass.c hashtable.h oilcpu.h oilclass.h oilcore.h

oilincludedir = $(includedir)/oil
oilinclude_HEADERS = oilcore.h oilcpu.h oilclass.h

