check_PROGRAMS = hashtable_test oilclass_test
TESTS = hashtable_test oilclass_test

hashtable_test_SOURCES = hashtable_test.c test_common.h ../hashtable.c ../hashtable.h
oilclass_test_SOURCES = \
    oilclass_test.c     \
    test_common.h       \
    ../hashtable.c      \
    ../hashtable.h

CLEANFILES = hashtable_test oilclass_test
